--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "9.78.0",
+    "@react-three/fiber": "8.13.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.26.2",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.562.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-latex-next": "^3.0.0",
     "react-router-dom": "^7.12.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "three": "0.155.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
